--- a/l10n/en.json
+++ b/l10n/en.json
@@ -9,6 +9,7 @@
   "changeInterface": "change interface",
   "changeMode": "change mode",
   "changeLanguage": "change language",
+  "changeTableList": "Change Virus List",
   "home": "Home",
   "setting": "Setting",
   "contactUs": "Contact Us",
