--- a/l10n/zh-Hans.json
+++ b/l10n/zh-Hans.json
@@ -9,6 +9,7 @@
   "changeInterface": "改变界面",
   "changeMode": "改变模式",
   "changeLanguage": "更改语言",
+  "changeTableList": "更改病毒例表",
   "home": "主页",
   "setting": "设定",
   "contactUs": "联系我们",
