--- a/l10n/zh-Hant.json
+++ b/l10n/zh-Hant.json
@@ -9,6 +9,7 @@
   "changeInterface": "改變界面",
   "changeMode": "改變模式",
   "changeLanguage": "更改語言",
+  "changeTableList": "更改病毒例表",
   "home": "主頁",
   "setting": "設定",
   "contactUs": "聯繫我們",
