--- a/l10n/ja.json
+++ b/l10n/ja.json
@@ -9,6 +9,7 @@
   "changeInterface": "インターフェースの変更",
   "changeMode": "モード変更",
   "changeLanguage": "言語を変更",
+  "changeTableList": "ウイルス リストの変更",
   "home": "ホーム",
   "setting": "設定",
   "contactUs": "お問い合わせ",
